src/_includes/assets/css/screen.css
/* ... */
.img {
  display: block;
  width: 100%;
  height: 100%;
  background-position: center center;
  background-size: cover;
}

.hidden {
  visibility: hidden;
  position: absolute;
  text-indent: -9999px;
}

.sr-only {
  clip: rect(0, 0, 0, 0);
  border-width: 0;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* 2. Layout - Page building blocks
/* ---------------------------------------------------------- */

.site-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.site-main {
  z-index: 100;
  flex-grow: 1;
  margin-top: calc(var(--header-height) * 3 + 5px);
}

.under-header-content + .site-main {
  margin-top: 0;
}

/* Full width page blocks */
.outer {
  position: relative;
  padding: 0 4vw;
}

/* Centered content container blocks */
.inner {
  margin: 0 auto;
  max-width: 1060px;
  width: 100%;
}

/* Usage:

<div class="outer">
    <div class="inner">
        Centered content
    </div>
</div>

*/

/* 3. Special Template Styles
/* ---------------------------------------------------------- */

/* 4. Site Header
/* ---------------------------------------------------------- */

.site-header {
  position: fixed;
  z-index: 1000;
  color: var(--gray00);
  width: 100%;
  background: var(--theme-color);
  font-family: var(--font-family-sans-serif);
  font-display: swap;
}

.site-header.no-image:before,
.site-header.no-image:after {
  display: none;
}

.under-header-content {
  background-color: var(--secondary-color);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 40px 10px 30px;
  margin-top: calc(var(--header-height) * 2);
  min-height: 200px;
  text-align: center;
  color: var(--primary-background);
}

.site-title {
  z-index: 10;
  margin: 0;
  padding: 0;
  font-size: 3.8rem;
  font-weight: 700;
}

.site-logo {
  max-height: 45px;
}

.site-description {
  z-index: 10;
  margin: 0;
  padding: 5px 0;
  font-size: 2.2rem;
  font-weight: 300;
  letter-spacing: 0.5px;
  opacity: 0.8;
}

@media (max-width: 500px) {
  .site-title {
    font-size: 3.2rem;
  }

  .site-description {
    font-size: 1.8rem;
  }
}

@media (min-width: 375px) {
  /* padding ported from master */
  .nav-padding {
    position: relative;
    padding: 0 15px;
  }
}

/* 5. Site Navigation
/* ---------------------------------------------------------- */

.exposed-button-nav {
  color: var(--gray00);
  background-color: var(--theme-color);
  height: var(--header-element-size);
  padding: 0 4px;
  align-items: center;
  min-width: var(--header-element-size);
  border: 1px solid var(--gray00);
  font-size: 18px;
}

@media (min-width: 601px) {
  .exposed-button-nav {
    padding-inline: 16px;
  }
}

.exposed-button-nav:is(
  :hover,
  :hover:focus,
  [aria-expanded='true'],
  [aria-expanded='true']:hover
),
.lang-button-nav:is(
  :hover,
  :hover:focus,
  [aria-expanded='true'],
  [aria-expanded='false'].force-show
) {
  background-color: var(--gray00);
  color: var(--theme-color);
}

.display-menu {
  display: block !important;
  max-height: calc(
    100vh - var(--header-height) - var(--header-sub-element-size)
  );
  overflow-y: auto;
  scrollbar-width: none;
  text-align: left;
  top: var(--header-height);
  margin: 0px;
}

@media (min-width: 980px) {
  .display-menu {
    max-height: calc(100vh - var(--header-height));
    top: var(--header-height);
  }
}

ol,
ul {
  -webkit-padding-start: 40px;
  margin-bottom: 10px;
  margin-top: 0;
  padding-inline-start: 40px;
}

.universal-nav {
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  align-items: center;
  background-color: var(--theme-color);
  color: var(--gray00);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-size: 18px;
  height: var(--header-height);
  justify-content: space-between;
  padding: 0 15px;
}

.nav-link {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--gray90);
  border: none;
  color: var(--gray00);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-height: var(--header-sub-element-size);
  padding: 2px 15px 0;
  white-space: normal;
  margin: 0px;
  width: 100%;
  cursor: pointer;
}

.nav-link:focus-visible,
.nav-link:not([aria-disabled='true']):hover {
  background-color: var(--gray10);
  color: var(--gray90);
  cursor: pointer;
  outline-color: transparent !important;
  text-decoration: none;
}

.nav-link-flex {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  justify-content: space-between;
}

@media (min-width: 980px) {
  .nav-list {
    max-width: 15em;
  }
}

.nav-list {
  background-color: var(--theme-color);
  display: none;
  list-style: none;
  padding: 0;
  position: absolute;
  right: 0;
  width: 100%;
  z-index: var(--z-index-site-header);
  justify-content: flex-end;
  cursor: pointer;
}

.nav-list li {
  cursor: pointer;
  margin: 0px;
  padding: 0px;
}

.site-nav {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  font-size: 1.2em;
  font-family: var(--font-family-sans-serif);
  font-display: swap;
  height: var(--header-height);
  background: var(--theme-color);
  position: fixed;
  z-index: 1000;
  color: var(--gray00);
  width: 100%;
}

.site-nav-middle {
  display: flex;
  align-items: center;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  letter-spacing: 0.4px;
  white-space: nowrap;
  margin-left: 0;
  margin-right: auto;
  -ms-overflow-scrolling: touch;
}

.site-nav-left {
  height: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}
/* ... */

